# unittest-parallel

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  pylintrc  setup.cfg  setup.py
src/tests/: test_main.py
src/unittest_parallel/: __init__.py  __main__.py  main.py
unittest_parallel/: __init__.py  __main__.py  main.py
unittest_parallel/tests/: test.py  test_main.py
