[metadata]
name = unittest-parallel
version = 1.5.3
url = https://github.com/craigahobbs/unittest-parallel
author = Craig A. Hobbs
author_email = craigahobbs@gmail.com
license = MIT
description = Parallel unit test runner with coverage support
long_description = file:README.md
long_description_content_type = text/markdown
keywords = test, unittest, coverage, parallel
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
packages = unittest_parallel
package_dir =
    = src
install_requires =
    coverage >= 5.1

[options.entry_points]
console_scripts =
    unittest-parallel = unittest_parallel.main:main
